docs: create invoice
